--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,17 @@
-name: Deploy to Azure Web App
+name: Deploy Static HTML to Azure Web App
 
 on:
   push:
     branches:
-      - main  # or your deploy branch
+      - main
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'  # or your version
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build app
-      run: npm run build  # Skip if not needed
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
